# pipelines_rj_cor

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  poetry.toml  pyproject.toml  run_local.py
.github/workflows/: cd.yaml  cd_staging.yaml  code-tree-analysis.yaml  lint.yaml
.github/workflows/scripts/: register_flows.py
pipelines/: __init__.py  constants.py  flows.py  tasks.py  utils_api.py  utils_rj_cor.py
pipelines/bot_semaforo/: __init__.py  flows.py  tasks.py
pipelines/exemplo/nome_do_objetivo/: flows.py
pipelines/meteorologia/: __init__.py  utils.py
pipelines/meteorologia/meteorologia_inmet/: flows.py  schedules.py  tasks.py
pipelines/meteorologia/meteorologia_redemet/: flows.py  schedules.py  tasks.py
pipelines/meteorologia/precipitacao_alertario/: constants.py  flows.py  schedules.py  tasks.py  tasks_gypscie.py  utils.py
pipelines/meteorologia/precipitacao_cemaden/: flows.py  schedules.py  tasks.py
pipelines/meteorologia/precipitacao_inea/: flows.py  schedules.py  tasks.py
pipelines/meteorologia/precipitacao_websirene/: flows.py  schedules.py  tasks.py
pipelines/meteorologia/radar/: __init__.py
pipelines/meteorologia/satelite/: cpt_convert.py  flows.py  remap.py  satellite_utils.py  schedules.py  tasks.py
pipelines/rj_escritorio/: __init__.py
pipelines/rj_escritorio/rain_dashboard/: constants.py  flows.py  schedules.py  tasks.py
pipelines/templates/run_dbt_model/: flows.py
pipelines/teste_pipeline/: __init__.py  flows.py  schedules.py  tasks.py
pipelines/utils/: __init__.py  custom.py  tasks.py  utils.py
queries/: dbt_project.yml  profiles.yml
(+53 files in other folders)
