[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dbt-bigquery = "^1.6.1"
google-cloud-storage = "^2.10.0"
prefect = "1.4.1"
python-telegram-bot = "^21.4"
redis-pal = "^1.0.0"
bs4 = "^0.0.2"
unidecode = "^1.3.8"
pandas-read-xml = "^0.3.1"
netcdf4 = "^1.7.1.post2"
fiona = "^1.9.6"
s3fs = "^2024.6.1"
xarray = "^2024.7.0"
matplotlib = "^3.9.2"
cartopy = "^0.23.0"
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio.git", rev = "40c691212ed302c8e595d1932118dfbb8df439f2", branch = "feat/reimplement-templates", extras = [
    "pipelines",
    "pipelines-templates",
] }

[[package]]
name = "basedosdados"
version = "2.0.0-beta.21"
description = "Organizar e facilitar o acesso a dados brasileiros através de tabelas públicas no BigQuery."
optional = false
python-versions = ">=3.8.1,<4"
files = []
develop = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
taskipy = "^1.12.0"
isort = "^5.12.0"


[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
networkx = "^3.1"
loguru = "^0.7.0"
typer = "^0.9.0"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
